Fix spacing of MessageList component

--- a/src/components/Messages/Message.module.css
+++ b/src/components/Messages/Message.module.css
@@ -2,7 +2,7 @@
   display: flex;
   background-color: #2105cd;
   padding: 0.5rem 0.875rem;
-  margin: 0.7rem 0;
+  margin: 0;
   border-radius: 8px;
   width: fit-content;
   max-width: 70%;
