--- a/src/components/Messages/MessageList.module.css
+++ b/src/components/Messages/MessageList.module.css
@@ -1,7 +1,8 @@
-.MessageList {
+.messageList {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
+  margin: 1rem 0;
   color: #fff;
   padding: 0 1rem;
 }
